corrected spacing issues w/ header content

--- a/scss/_homePageHeader.scss
+++ b/scss/_homePageHeader.scss
@@ -9,20 +9,26 @@
   // INDEX.HTML
   &-home {
     text-align: center;
-    background-image: url("https://source.unsplash.com/Q1p7bh3SHj8");
+    background: url("https://source.unsplash.com/Q1p7bh3SHj8") no-repeat center
+      center/cover;
     min-height: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
+    // background-attachment: fixed;
+    // background-position: center;
+    // background-repeat: no-repeat;
+    // background-size: cover;
 
     .header-content {
       min-width: 70%;
-      margin: 45% 0 0 1.5rem;
+      margin: 40% 0 0 1.5rem;
       text-align: left;
       font-size: 1.3rem;
-      border-left: 0.5rem solid red;
-      padding-left: 1rem;
+
+      div {
+        position: relative;
+        top: 5rem;
+        border-left: 0.5rem solid red;
+        padding-left: 1rem;
+      }
     }
   }
 }
@@ -40,19 +46,31 @@
 
 //  LANDSCAPE: width > height
 
+@media (min-width: 560px) {
+  #header {
+    &-home {
+      .header-content {
+        margin: 10% 0 0 1.5rem; //tob right bottom left
+
+        div {
+          position: relative;
+          top: 2rem;
+        }
+
+        .tagline {
+          font-size: inherit; // inherit from root?
+        }
+      }
+    }
+  }
+}
+
 @media (min-width: 768px) {
   #header {
     &-home {
       .header-content {
-        // min-width: 70%;
-        // padding-left: 1.5rem;
-        // text-align: left;
-        // border-left: 0.5rem solid red;
-        margin: 20% 0 0 3%;
-
-        .lead,
-        .tagline {
-          font-size: 3rem;
+        div {
+          top: 5rem;
         }
       }
     }
